[tool.poetry]
name = "notion-blogpost-generator"
version = "0.1.0"
description = "A script to generate blogposts from Notion pages using Langchain and Anthropic AI."
authors = ["Felix Treutwein <felix@treutwein.de>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "*"
beautifulsoup4 = "*"
html2text = "*"
langchain-anthropic = "*"
langchain-openai = "*"
langchain = "*"
youtube-transcript-api = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"